--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "next": "^13.0.6",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "18.11.10",
+    "prettier": "^3.2.5",
     "typescript": "^4.9.3"
   }
 }
