--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "format": "prettier . --write"
   },
   "dependencies": {
-    "next": "^13.0.6",
-    "nextra": "latest",
-    "nextra-theme-docs": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "^15.0.4",
+    "nextra": "^3.2.4",
+    "nextra-theme-docs": "^3.2.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "18.11.10",
-    "prettier": "^3.2.5",
-    "typescript": "^4.9.3"
+    "@types/node": "22.10.1",
+    "prettier": "^3.4.2",
+    "typescript": "^5.7.2"
   }
 }
