--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0-beta.6",
     "@types/node": "22.10.1",
     "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^4.0.0-beta.6",
     "typescript": "^5.7.2"
   }
 }
