--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "nextra": "^3.2.4",
     "nextra-theme-docs": "^3.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
+    "@iconify/react": "^5.1.0",
     "@tailwindcss/postcss": "^4.0.0-beta.6",
     "@types/node": "22.10.1",
     "prettier": "^3.4.2",
